--- a/server/djangoapp/templates/djangoapp/navbar.html
+++ b/server/djangoapp/templates/djangoapp/navbar.html
@@ -2,7 +2,7 @@
     <a class="navbar-brand" href="{% url 'djangoapp:index' %}"
         >Best Cars Dealership</a
     >
-    <ul class="navbar-nav">
+    <ul class="navbar-nav mr-auto">
         <li class="nav-item">
             <a class="nav-link" href="{% url 'djangoapp:about' %}">About Us</a>
         </li>
@@ -12,4 +12,57 @@
             >
         </li>
     </ul>
+
+    {% if user.is_authenticated %}
+    <span class="navbar-text">
+        ({{ user.first_name|default:user.username }})
+    </span>
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link text-primary" href="{% url 'djangoapp:logout' %}"
+                >Logout</a
+            >
+        </li>
+    </ul>
+    {% else %}
+    <form
+        class="form-inline my-2 my-lg-0"
+        action="{% url 'djangoapp:login' %}"
+        method="post"
+    >
+        {% csrf_token %}
+        <input
+            class="form-control mr-sm-2"
+            type="text"
+            placeholder="Username"
+            name="username"
+            required
+        />
+        <input
+            class="form-control mr-sm-2"
+            type="password"
+            placeholder="Password"
+            name="password"
+            required
+        />
+        <button class="btn btn-primary my-2 my-sm-0" type="submit">
+            Login
+        </button>
+    </form>
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link text-primary" href="{% url 'djangoapp:signup' %}"
+                >Sign Up</a
+            >
+        </li>
+    </ul>
+    {% endif %}
 </nav>
+
+{% if messages %}
+<div class="container mt-2">
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+    {% endfor %}
+</div>
+{% endif %}
