--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        {% load static %}
+        <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        />
+    </head>
     <body>
-    <!--Add a registration form here -->
+        {% include 'djangoapp/navbar.html' %}
+        <div class="container mt-5">
+            <h1>Sign Up</h1>
+            <p></p>
+            <form action="{% url 'djangoapp:signup' %}" method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="first_name">First Name:</label>
+                    <input
+                        type="text"
+                        class="form-control"
+                        id="first_name"
+                        placeholder="Enter first name"
+                        name="first_name"
+                        required
+                    />
+                </div>
+                <div class="form-group">
+                    <label for="last_name">Last Name:</label>
+                    <input
+                        type="text"
+                        class="form-control"
+                        id="last_name"
+                        placeholder="Enter last name"
+                        name="last_name"
+                        required
+                    />
+                </div>
+                <div class="form-group">
+                    <label for="username">Username:</label>
+                    <input
+                        type="text"
+                        class="form-control"
+                        id="username"
+                        placeholder="Enter username"
+                        name="username"
+                        required
+                    />
+                </div>
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input
+                        type="password"
+                        class="form-control"
+                        id="password"
+                        placeholder="Enter password"
+                        name="password"
+                        required
+                    />
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
     </body>
 </html>
