dealership details and reviews

--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -1,18 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Dealership Review</title>
-    {% load static %}
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Dealership Review</title>
+        {% load static %}
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        />
+    </head>
 
     <body>
+        <!--Add a nav bar here -->
+        {% include 'djangoapp/navbar.html' %}
 
-    <!--Add a nav bar here -->
-
-    <!-- Add reviews as cards -->
-
+        <!-- Add reviews as cards -->
+        <div class="container mt-5 py-5 px-5 bg-light">
+            <h1>
+                Reviews for
+                <span class="bolder text-primary"
+                    >{{dealership.full_name}}</span
+                >
+            </h1>
+            {% if not reviews %} {% if not user.is_authenticated %}
+            <div class="mt-5 d-flex flex-column">
+                <div class="d-flex">
+                    <h3>
+                        There are no reviews for this dealership yet. Login now
+                        and be the first to leave a review!
+                    </h3>
+                </div>
+                <div class="d-flex justify-content-end">
+                    <a
+                        class="btn btn-primary w-25 mt-5 disabled"
+                        href="{% url 'djangoapp:add_review' dealer_id %}"
+                        >Add a Review</a
+                    >
+                </div>
+            </div>
+            {% else %}
+            <div class="mt-5 d-flex flex-column">
+                <div class="d-flex">
+                    <h3>
+                        There are no reviews for this dealership yet. Be the
+                        first to leave a review!
+                    </h3>
+                </div>
+                <div class="d-flex justify-content-end">
+                    <a
+                        class="btn btn-primary w-25 mt-5"
+                        href="{% url 'djangoapp:add_review' dealer_id %}"
+                        >Add a Review</a
+                    >
+                </div>
+            </div>
+            {% endif %} {% else %}
+            <div class="mt-5 card-columns">
+                {% for review in reviews %}
+                <div class="card" style="height: 170px">
+                    <div
+                        class="row no-gutters d-flex align-items-center h-100 border-primary border-left rounded-right"
+                    >
+                        {% if review.sentiment == "positive" %}
+                        <div class="col-md-3 px-2">
+                            <img
+                                src="{{MEDIA_URL}}/emoji/positive.png"
+                                class="card-img"
+                                alt="sentiment"
+                            />
+                        </div>
+                        {% elif review.sentiment == "negative" %}
+                        <div class="col-md-3 px-2">
+                            <img
+                                src="{{MEDIA_URL}}/emoji/negative.png"
+                                class="card-img"
+                                alt="sentiment"
+                            />
+                        </div>
+                        {% else %}
+                        <div class="col-md-3 px-2">
+                            <img
+                                src="{{MEDIA_URL}}/emoji/neutral.png"
+                                class="card-img"
+                                alt="sentiment"
+                            />
+                        </div>
+                        {% endif %}
+                        <div class="col-md-9 h-100">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    {{review.car_make}}, {{review.car_model}}
+                                </h5>
+                                <h6 class="card-title">{{review.car_year}}</h6>
+                                <p class="card-text">{{review.review}}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+            {% if not user.is_authenticated %}
+            <div class="mt-5 d-flex flex-column">
+                <div class="d-flex justify-content-end">
+                    <a
+                        class="btn btn-primary w-25 mt-5 disabled"
+                        href="{% url 'djangoapp:add_review' dealer_id %}"
+                        >Add a Review</a
+                    >
+                </div>
+            </div>
+            {% else %}
+            <div class="mt-5 d-flex flex-column">
+                <div class="d-flex justify-content-end">
+                    <a
+                        class="btn btn-primary w-25 mt-5"
+                        href="{% url 'djangoapp:add_review' dealer_id %}"
+                        >Add a Review</a
+                    >
+                </div>
+            </div>
+            {% endif %} {% endif %}
+        </div>
     </body>
-
 </html>
