--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -22,5 +22,39 @@
         <!--Add a nav bar here -->
         {% include 'djangoapp/navbar.html' %}
         <!--Add a dealer table here -->
+        <main class="container mt-5">
+            {% block main %}
+            <table class="table text-center" id="table" data-filter-control="true">
+                <thead>
+                    <tr class="">
+                        <th data-field="id">ID</th>
+                        <th data-field="name">Dealer Name</th>
+                        <th data-field="city">City</th>
+                        <th data-field="address">Address</th>
+                        <th data-field="zip">Zip</th>
+                        <th data-field="st" data-filter-control="select" class="form-inline"><span>State</span></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for dealer in dealerships %}
+                        <tr>
+                            <td>{{dealer.id}}</td>
+                            <td><a href={% url 'djangoapp:dealer_details' dealer.id %}>{{dealer.full_name}}</a></td>
+                            <td>{{dealer.city}}</td>
+                            <td>{{dealer.address}}</td>
+                            <td>{{dealer.zip}}</td>
+                            <td class="mx-auto">{{dealer.st}}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            {% endblock main %}
+        </main>
+
+    <script>
+        $(function() {
+          $('#table').bootstrapTable()
+        })
+      </script>
     </body>
 </html>
