--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -1,16 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker.css" rel="stylesheet">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.js"></script>
-
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        {% load static %}
+        <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        />
+        <link
+            href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker.css"
+            rel="stylesheet"
+        />
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.js"></script>
+    </head>
     <body>
-    <!--Add review form here -->
+        {% include 'djangoapp/navbar.html' %}
+        <!--Add review form here -->
+        <div class="container mt-5 py-5 px-5 bg-light">
+            <h2>
+                Add a review about
+                <span class="text-primary">{{dealership.full_name}}</span>
+            </h2>
+            <form
+                action="{% url 'djangoapp:add_review' dealer_id%}"
+                method="post"
+                class="mt-5"
+            >
+                {% csrf_token %}
+                <div class="form-group px-2 flex-column align-items-center">
+                    <label for="content" class="font-weight-bolder"
+                        >Enter your review:</label
+                    >
+                    <textarea
+                        class="form-control mb-3"
+                        id="content"
+                        name="content"
+                        rows="2"
+                        required
+                    ></textarea>
+                    <div class="mb-2 d-inline-flex justify-content-start">
+                        <input
+                            class="form-check-input ml-2"
+                            type="checkbox"
+                            name="purchasecheck"
+                            id="purchasecheck"
+                        />
+                        <label for="purchasecheck" class="ml-4 px-1">
+                            Has purchased the car from
+                            {{dealership.full_name}}?</label
+                        >
+                    </div>
+                    <p class="font-weight-bolder">
+                        Select your car (model - make - year):
+                        <select
+                            name="car"
+                            id="car"
+                            class="form-select"
+                            required
+                        >
+                            {% for car in cars %}
+                            <option value="{{car.id}}">
+                                {{car.name}} - {{car.car_make.name}} -
+                                {{car.year|date:"Y"}}
+                            </option>
+                            {% endfor %}
+                        </select>
+                    </p>
+
+                    <label for="purchasedate" class="font-weight-bolder"
+                        >Select your purchase date:</label
+                    >
+                    <input
+                        class="date-own form-control mb-4"
+                        type="date"
+                        name="purchasedate"
+                        id="purchasedate"
+                    />
+                    {% if user.is_authenticated %}
+                    <button type="submit" class="btn btn-primary">
+                        Submit
+                    </button>
+                    {% else %}
+                    <button type="submit" class="btn btn-primary disabled">
+                        Submit</button
+                    ><small class="text-danger"
+                        >Must be logged to send a review</small
+                    >
+                    {% endif %}
+                </div>
+            </form>
+        </div>
     </body>
 </html>
